# nats-workbench

./: .gitignore  README.md  README_zh.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
src/: App.tsx  AppRoutes.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: connection_cmd.rs  connection_info_cmd.rs  game_cmd.rs  jetstream_cmd.rs  kv_cmd.rs  mod.rs  monitor_cmd.rs  object_cmd.rs  topic_cmd.rs
src-tauri/src/nats/: auth.rs  config.rs  connection.rs  message.rs  mod.rs
src/components/common/: ConnectionForm.tsx  MessageTable.tsx  PayloadEditor.tsx  StatusBadge.tsx  SubjectTree.tsx  TopicInput.tsx
src/components/layout/: Header.tsx  Navbar.tsx
src/i18n/: index.ts
src/i18n/locales/: en.json  zh.json
src/pages/: BenchmarkPage.tsx  ConnectionsPage.tsx  DashboardPage.tsx  JetStreamPage.tsx  KvStorePage.tsx  MessagesPage.tsx  MonitorPage.tsx  ObjectStorePage.tsx  ReplayPage.tsx  RoomTopologyPage.tsx  TopicsPage.tsx
src/stores/: connectionStore.ts  messageStore.ts  settingsStore.ts  topicStore.ts
src/types/: index.ts
src/utils/: logger.ts
