[package]
name = "nats-workbench"
version = "0.1.0"
description = "A NATS Management Workbench"
authors = ["you"]
edition = "2021"

[lib]
name = "nats_workbench_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-nats = "0.49"
nkeys = "0.4"
jsonwebtoken = "9"
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
base64 = "0.22"
hex = "0.4"
thiserror = "2"
tokio-stream = "0.1"
bytes = "1"
